syntax = "proto3";

package user;

option go_package = "/user_service;user_service";

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
  rpc CreateUser(CreateUserRequest) returns (User) {}
}

message User {
  int32 id = 1;
  string firstName = 2;
  string lastName = 3;
  string emailAddress = 4;
  bool activated = 5;
}

message GetUserRequest {
  int32 userId = 1;
}

message GetUserResponse {
  repeated User user = 1;
}

message CreateUserRequest {
  string firstName = 1;
  string lastName = 2;
  string emailAddress = 3;
  bool activated = 4;
}